Exercises started - Train

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 
 <body>
   <script src ="./js/styling.js"></script>
+  <!-- <script src ="./js/dnd.js"></script> -->
   <div id="main">
     <div id="header">
       <div id="logo">
-        <h1>Mitchell Heath <a href="#">QAC</a></h1>
+        <h1 id ="drag-1" class="draggable">Mitchell Heath <a href="#">QAC</a></h1>
         <div class="slogan">Digital CV</div>
       </div>
       <div id="menubar">
@@ -23,7 +24,8 @@
           <li><a href="./include/projects.html">Projects</a></li>
           <li><a href="./include/skills.html">Skills</a></li>
           <li><a href="./include/contact.html">Contact</a></li>
-          <li><a href="./jsplayground.html">JavaScript</a></li>
+          <li><a href="./javaExercises.html">Exercises</a></li>
+          
         </ul>
       </div>
     </div>
